--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
         <p>
           <a class="link--cta" href="#">Download Excursion (Coming Soon!)</a>
         </p>
+        <video autoplay loop>
+            <source src="resources/videos/Phone video.mp4" type="video/mp4">
+        </video>
+
 <
 
 
