--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           <a class="link--cta" href="#">Download Excursion (Coming Soon!)</a>
         </p>
         <video autoplay loop>
-            <source src="resources/videos/Phone video.mp4" type="video/mp4">
+            <source src="resources/videos/excursion.mp4" type="video/mp4">
         </video>
 
 <
